Adding New Features

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <div class="heading">
         <div class="game-title">
             Tic Tac Toe
         </div>
 
-        <div class="turn-container">
-            <p class="turn-first">O</p>
-            <p class="turn-second">Turn</p>
+        <div class="winner-displayer-container hide">
+            <div class="winner-displayer">
+            </div>
+            <button class="new-btn">New Game</button>
         </div>
-    </header>
+        <div class="turn-container">
+            <p class="turn-first">Start Game</p>
+        </div>
+    </div>
 
     <div class="game-container">
         <div class="box-container">
