--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Title of the Game  -->
     <div class="heading">
         <div class="game-title">
             Tic Tac Toe
         </div>
 
+        <!-- Show the winner of the game and whether the game is draw or not  -->
         <div class="winner-displayer-container hide">
             <div class="winner-displayer">
             </div>
+
+            <!-- New Game button  -->
             <button class="new-btn">New Game</button>
         </div>
+
+        <!-- Turn displayer  -->
         <div class="turn-container">
             <p class="turn-first">Start Game</p>
         </div>
     </div>
 
+    <!-- Game Container  -->
     <div class="game-container">
         <div class="box-container">
 
@@ -40,10 +48,11 @@
         </div>
     </div>
 
+    <!-- Restart button  -->
     <div class="restart-btn-container">
         <button class="restart-btn">Restart</button>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
